# flask-entur-avgangstider

./: .dockerignore  Dockerfile  Dockerfile.template  README.md  README.rst  Untitled.ipynb  azure-pipelines.yml  docker-compose.yml  entur.txt  pyproject.toml  run_debug_server.py  tox.ini
.github/workflows/: pythonpackage.yml
docs/: api.rst  conf.py  developing.rst  flask_app.rst  index.rst  readme.rst  requirements.txt
rutertider/: __init__.py  entur_api.py  entur_query.py  ruter_api.py  utils.py
rutertider/static/css/: sismonitor_single.css
rutertider/static/fonts/Din/: DIN-Regular-webfont.eot  din-medium.eot
rutertider/templates/: departure_table.html  rutertider.html
src/: gunicorn_config.py
src/avgangstider/: __init__.py  classes.py  entur_api.py  entur_query.py  flask_app.py  utils.py
src/avgangstider/static/css/: sismonitor_single.css
src/avgangstider/templates/: avgangstider.html
src/rutertider/: __init__.py  entur_api.py  entur_query.py  flask_app.py  utils.py
src/rutertider/static/fonts/Din/: DIN-Bold-webfont.eot
src/rutertider/templates/: help.html  rutertider.html
tests/: conftest.py  test_classes.py  test_entur_api.py  test_entur_query.py  test_flask.py  test_flask_app.py  test_utils.py
tests/data/: situation.json  situations.json  situations.pkl
