[tool.poetry]
name = "avgangstider"
version = "0.1.0"
description = "Avgangstider fra EnTur"
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.22"
gunicorn = {version = "^19.9", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-flask = "^0.15.0"
flake8 = "^3.7"
tox = "^3.14"
isort = "^4.3"
sphinx = "^2.2"
mypy = "^0.720.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
