[tool.poetry]
name = "avgangstider"
version = "0.1.0"
description = "Avgangstider fra EnTur"
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.22"
gunicorn = {version = "^20.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-flask = "*"
flake8 = "*"
tox = "*"
isort = "*"
sphinx = "*"
mypy = "*"
sphinx-rtd-theme = "*"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
